--- a/CCMS/Views/Shared/_LayoutCCMS.cshtml
+++ b/CCMS/Views/Shared/_LayoutCCMS.cshtml
@@ -24,6 +24,7 @@
     <!-- JQVMap -->
     @*<link rel="stylesheet" href="~/Content/dashboardNew/plugins/jqvmap/jqvmap.min.css">*@
     <!-- Theme style -->
+    @*<link href="~/Content/dashboardNew/dist/AdminLTE.css" rel="stylesheet" />*@
 
     @*<link href="~/Content/dashboardNew/dist/AdminLTE.css" rel="stylesheet" />*@
     <link rel="stylesheet" href="~/Content/dashboardNew/dist/css/adminlte.css">
