--- a/CCMS/Views/Home/ReceiveInnbondCall.cshtml
+++ b/CCMS/Views/Home/ReceiveInnbondCall.cshtml
@@ -69,9 +69,9 @@
     <div class="content-header">
         <div class="container-fluid">
             <div class="row m-b-0">
-                <div class="col-sm-3" style="margin-top:-14px!important;margin-bottom:-11px!important;font-size:11pt!important">
+                <div class="col-sm-2" style="margin-top:-14px!important;margin-bottom:-11px!important;font-size:11pt!important">
                     <button type="button" ng-if="!showNewCall && !IsBack" ng-click="NewReciveInbondCall()" style="width:100px!important;margin-top:5px !important" class="btn btn-sm btn-success-custom"><i class="fa fa-plus"></i>&nbsp;Create</button>&nbsp;
-                    <button ng-if="IsBack" style="cursor:pointer!important;margin-top:5px !important;width:150px!important;" class="btn btn-sm btn-success-custom" ng-click="BacltoList()"><i class="fa fa-chevron-left"></i>&nbsp;Back to Search</button>
+                    <button ng-if="IsBack" style="cursor:pointer!important;margin-top:5px !important;width:100px!important;" class="btn btn-sm btn-success-custom" ng-click="BacltoList()"><i class="fa fa-chevron-left"></i>&nbsp;Back</button>
                     <span ng-show="IsData" style="font-weight:500">
                         <img src="~/Content/dashboardNew/dist/img/avatar5.png" width="50" height="50" class="img-thumbnail" />
 
@@ -91,7 +91,7 @@
                         &nbsp;Date of Birth: <b class="text-success">1958-07-01</b>
                     </span>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-4">
                     <ol class="breadcrumb float-sm-right">
                         <li class="breadcrumb-item"><a href="#"><i class="fa fa-home" style="text-decoration:none!important"></i>&nbsp;Call Center</a></li>
                         <li class="breadcrumb-item active">Receive Inbond Calls</li>
