--- a/CCMS/Views/Shared/_LayoutCCMS.cshtml
+++ b/CCMS/Views/Shared/_LayoutCCMS.cshtml
@@ -50,6 +50,7 @@
     <script src="~/Scripts/angular-route.min.js"></script>
     <script src="~/AngularJs/ccmsApp.js"></script>
     <script src="~/AngularJs/controllers/HomeCntrl.js"></script>
+    <script src="~/AngularJs/services/MasterService.js"></script>
     <style>
         .bg-green-custom {
             background-color: #057a52 !important
@@ -230,7 +231,15 @@
                     </a>
                     <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right text-center border">
                         <div class="dropdown-divider"></div>
-                        <h5 class="p-5">Hello <br />Admin</h5>
+                        @if (Session["LoggedUserUsername"] != null)
+                        {
+                            <h5 class="p-5">Hello <br />@Session["LoggedUserUsername"].ToString()</h5>
+                        }
+                        else
+                        {
+                            <h5 class="p-5">Hello <br />Admin</h5>
+                        }
+
                         <div class="dropdown-divider"></div>
 
                         <div class="dropdown-divider"></div>
@@ -260,7 +269,7 @@
                 <nav class="mt-2">
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                         <!-- Add icons to the links using the .nav-icon class
-    with font-awesome or any other icon font library -->
+                        with font-awesome or any other icon font library -->
                         <li class="nav-item">
                             <a href="../Home/Dashboard" class="nav-link">
                                 <i class="nav-icon fa fa-tachometer-alt"></i>
@@ -282,7 +291,8 @@
                                 <li class="nav-item" style="color:#000!important;border-bottom:1px dashed #a2c149!important">
                                     <a href="#" class="nav-link">
                                         <i class="nav-icon fa fa-question-circle"></i>
-                                        <p> Query
+                                        <p>
+                                            Query
                                             <i class="fa fa-angle-down right"></i>
                                         </p>
                                     </a>
@@ -557,12 +567,12 @@
         </div>
         <!-- /.content-wrapper -->
         @*<footer class="main-footer">
-            <strong>Copyright &copy; 2021 <a href="#">CCMS</a>.</strong>
-            All rights reserved.
-            <div class="float-right d-none d-sm-inline-block">
-                <b>Version</b> 0.01
-            </div>
-        </footer>*@
+                <strong>Copyright &copy; 2021 <a href="#">CCMS</a>.</strong>
+                All rights reserved.
+                <div class="float-right d-none d-sm-inline-block">
+                    <b>Version</b> 0.01
+                </div>
+            </footer>*@
 
         <!-- Control Sidebar -->
         <aside class="control-sidebar control-sidebar-dark">
