--- a/CCMS/Views/Shared/_LayoutCCMS.cshtml
+++ b/CCMS/Views/Shared/_LayoutCCMS.cshtml
@@ -274,7 +274,7 @@
 
                         <div class="dropdown-divider"></div>
                         <div class="dropdown-item dropdown-footer">
-                            <a href="#" ng-click="logOut()" class="btn btn-warning" style="color:#000">
+                            <a href="../home/index" ng-click="logOut()" class="btn btn-warning" style="color:#000">
                                 Sign out
                             </a>
                         </div>
@@ -577,7 +577,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">
+                            <a href="../home/index" class="nav-link">
                                 <i class="nav-icon fa fa-power-off"></i>
                                 <p>
                                     Signout
