--- a/CCMS/Views/Home/ReceiveInnbondCall.cshtml
+++ b/CCMS/Views/Home/ReceiveInnbondCall.cshtml
@@ -1471,7 +1471,32 @@
                                         <h3 class="card-title ml-2 font-weight-bold" style="padding: 3px;">Caller Work Details</h3>
                                     </div>
                                     <div class="card-body">
-                                        <div class="row">
+                                        <div class="row mt-2">
+                                            <div class="col-lg-4">
+                                                <div class="icheck-primary d-inline">
+                                                    <label class="card-title ml-2" style="margin-left: -23px !important;">
+                                                        Living?
+                                                    </label>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-4 mb-1">
+                                                <div class="icheck-primary d-inline">
+                                                    <input type="checkbox" id="CITIZENSHIP_CHK">
+                                                    <label for="checkboxPrimary1">
+                                                        YES
+                                                    </label>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-4 mb-1">
+                                                <div class="icheck-primary d-inline">
+                                                    <input type="checkbox" id="CITIZENSHIP_CHK2">
+                                                    <label for="checkboxPrimary2">
+                                                        NO
+                                                    </label>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        @*<div class="row">
                                             <div class="col-12 col-lg-12 mb-1">
                                                 <label>Living</label>
                                                 <div class="input-group" style="margin-top:8px">
@@ -1491,7 +1516,7 @@
                                             </div>
 
 
-                                        </div>
+                                        </div>*@
                                         <div class="row">
                                             <div class="col-12 col-lg-3 mb-1">
                                                 <label>First risk work year</label>
@@ -1534,18 +1559,18 @@
                                                     <input type="text" class="form-control form-control-sm" placeholder="" name="Alternative_Surname" ng-model="ModelData.Alternative_Surname">
                                                     <div class="input-group-prepend" data-toggle="modal" data-target="#occupationModal">
                                                         <span class="input-group-text  btn btn-success-custom">
-                                                            <i class="fa fa-ellipsis-h"></i>
+                                                            <i class="fa fa-plus"></i>
                                                         </span>
                                                     </div>
                                                 </div>
                                                 @*<div class="input-group">
-                            <div class="icheck-primary d-inline" style="margin-right:20px">
-                                <input type="radio" readonly ng-selected="true" id="genderRadio1" name="Gender" ng-model="ModelData.Gender" value="Male">
-                                <label for="genderRadio1">
-                                    Other
-                                </label>
-                            </div>
-                        </div>*@
+                    <div class="icheck-primary d-inline" style="margin-right:20px">
+                        <input type="radio" readonly ng-selected="true" id="genderRadio1" name="Gender" ng-model="ModelData.Gender" value="Male">
+                        <label for="genderRadio1">
+                            Other
+                        </label>
+                    </div>
+                </div>*@
                                             </div>
 
                                         </div>
@@ -1572,7 +1597,7 @@
                                             <div class="col-lg-12">
                                                 <table class="table table-bordered">
                                                     <thead style="background-color:#6c757d;color:#fff">
-                                                        <tr>
+                                                        <tr style="text-align:center">
                                                             <td>
                                                                 Start Date
                                                             </td>
@@ -1580,15 +1605,15 @@
                                                             <td>Employer</td>
                                                             <td>Occupation</td>
                                                             <td>Source</td>
-                                                            <td>Add</td>
+                                                            <td>Action</td>
                                                         </tr>
                                                     </thead>
                                                     <tbody>
-                                                        <tr>
+                                                        <tr style="height:50px">
                                                             <td>
                                                                 <div class="input-group">
 
-                                                                    <input type="text" class="form-control form-control-sm" placeholder="" name="First_Name" ng-model="ModelData.First_Name">
+                                                                    <input type="text" datepicker1 class="form-control form-control-sm" placeholder="" name="StartDate" ng-model="MinerModel.StartDate">
                                                                     <div class="input-group-prepend">
                                                                         <span class="input-group-text">
                                                                             <i class="fa fa-calendar"></i>
@@ -1599,7 +1624,7 @@
                                                             <td>
                                                                 <div class="input-group">
 
-                                                                    <input type="text" datepicker1 class="form-control form-control-sm" placeholder="" name="First_Name" ng-model="ModelData.First_Name">
+                                                                    <input type="text" datepicker1 class="form-control form-control-sm" placeholder="" name="EndDate" ng-model="MinerModel.EndDate">
                                                                     <div class="input-group-prepend">
                                                                         <span class="input-group-text">
                                                                             <i class="fa fa-calendar"></i>
@@ -1610,10 +1635,10 @@
                                                             <td>
                                                                 <div class="input-group">
 
-                                                                    <input type="text" datepicker1 class="form-control form-control-sm" placeholder="" name="First_Name" ng-model="ModelData.First_Name">
+                                                                    <input type="text"  class="form-control form-control-sm" placeholder="" name="Employer" ng-model="MinerModel.Employer">
                                                                     <div class="input-group-prepend">
                                                                         <span class="input-group-text  btn btn-success-custom">
-                                                                            <i class="fa fa-ellipsis-h"></i>
+                                                                            <i class="fa fa-plus"></i>
                                                                         </span>
                                                                     </div>
                                                                 </div>
@@ -1621,10 +1646,10 @@
                                                             <td>
                                                                 <div class="input-group">
 
-                                                                    <input type="text" class="form-control form-control-sm" placeholder="" name="First_Name" ng-model="ModelData.First_Name">
+                                                                    <input type="text" class="form-control form-control-sm" placeholder="" name="Occupation" ng-model="MinerModel.Occupation">
                                                                     <div class="input-group-prepend">
                                                                         <span class="input-group-text  btn btn-success-custom">
-                                                                            <i class="fa fa-ellipsis-h"></i>
+                                                                            <i class="fa fa-plus"></i>
                                                                         </span>
                                                                     </div>
                                                                 </div>
@@ -1632,17 +1657,24 @@
                                                             <td>
                                                                 <div class="input-group">
 
-                                                                    <input type="text" class="form-control form-control-sm" placeholder="" name="First_Name" ng-model="ModelData.First_Name">
+                                                                    <input type="text" class="form-control form-control-sm" placeholder="" name="Source" ng-model="MinerModel.Source">
                                                                     <div class="input-group-prepend">
                                                                         <span class="input-group-text  btn btn-success-custom">
-                                                                            <i class="fa fa-ellipsis-h"></i>
+                                                                            <i class="fa fa-plus"></i>
                                                                         </span>
                                                                     </div>
                                                                 </div>
                                                             </td>
-                                                            <td style="text-align:center"><i class="fa fa-plus-circle"></i></td>
+                                                            <td style="text-align:center"><a href="#" style="font-size:20px;"><i class="fa fa-plus-circle text-success" ng-click="addMinorDetails(MinerModel)"></i></a></td>
                                                         </tr>
-
+                                                        <tr ng-repeat="x in minerDynamicList">
+                                                            <td>{{x.StartDate}}</td>
+                                                            <td>{{x.EndDate}}</td>
+                                                            <td>{{x.Employer}}</td>
+                                                            <td>{{x.Occupation}}</td>
+                                                            <td>{{x.Source}}</td>
+                                                            <td style="text-align: center"><a href="#" ng-click="removeMinorDetailsByIndex($index)" style="font-size:20px;"><span class="fa fa-trash text-danger"></span></a></td>
+                                                        </tr>
                                                     </tbody>
                                                 </table>
                                             </div>
