--- a/CCMS/Views/Home/ReceiveInnbondCall.cshtml
+++ b/CCMS/Views/Home/ReceiveInnbondCall.cshtml
@@ -134,14 +134,20 @@
                                                     <i class="fa fa-sort-numeric-down"></i>
                                                 </span>
                                             </div>
-                                            <select class="form-control form-control-sm" name="id_type" ng-model="filterModal.id_type">
-                                                <option value="RSA ID Type">RSA ID Number</option>
-                                                <option></option>
+                                            <select class="form-control form-control-sm" name="id_type" ng-model="filterModal.id_type" ng-change="changeIDType(filterModal.id_type)">
+                                                <option value="">-- Select ID Type --</option>
+                                                <option value="Industry Number">Industry Number</option>
+                                                <option value="RSA ID Number">RSA ID Number</option>
+                                                <option value="Passport Number">Passport Number</option>
+                                                <option value="Employee Number">Employee Number</option>
+                                                <option value="Company Number">Company Number</option>
+                                                <option value="Bureau Number">Bureau Number</option>
+                                                <option value="Foriegn ID Number">Foriegn ID Number</option>
                                             </select>
                                         </div>
                                     </div>
                                     <div class="col-12 col-lg-3 mb-1">
-                                        <label></label>
+                                        <label>{{IdNumber}}</label>
                                         <div class="input-group">
                                             <input type="text" class="form-control form-control-sm" name="id_number" ng-model="filterModal.id_number">
                                             <div class="input-group-append">
@@ -692,7 +698,7 @@
                                     <div class="input-group">
                                         <input type="text" readonly class="form-control form-control-sm" placeholder="" name="Passport" ng-model="ModelData.Passport">
                                         <div class="input-group-prepend">
-                                            <span class="input-group-text  btn btn-success-custom" style="cursor: pointer;" data-toggle="modal" data-target="#myModal" ng-click="addModel('Passport')">
+                                            <span class="input-group-text  btn btn-success-custom" style="cursor: pointer;" data-toggle="modal" data-target="#myModal" ng-click="addModel('Passport Number')">
                                                 <span class="fa fa-plus">&nbsp;Add</span>
                                             </span>
                                         </div>
@@ -1722,7 +1728,7 @@
     </section>
 
     <div class="modal" id="myModal">
-        <div class="modal-dialog modal-sm">
+        <div class="modal-dialog modal-lg">
             <div class="modal-content">
 
                 <!-- Modal Header -->
@@ -1733,18 +1739,48 @@
 
                 <!-- Modal body -->
                 <div class="modal-body">
-                    <div class="col-lg-12">
-                        <label>{{modelValue}}</label>
-                        <div class="input-group">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="col-lg-6">
 
-                            <input type="text" class="form-control form-control-sm" placeholder="search...">
+                                <div class="input-group">
+
+                                    <input type="text" class="form-control form-control-sm" ng-model="UniqueNumber" placeholder="please enter the {{modelValue}}">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text  btn btn-success-custom" style="cursor: pointer;" ng-click="addDynamicNumber(modelValue,UniqueNumber)">
+                                            <i class="fa fa-plus">&nbsp;Add</i>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            
+
                         </div>
                     </div>
+                    <div class="row mt-2">
+                        <div class="col-lg-12">
+                            <table width="100%">
+                                <thead>
+                                    <tr>
+                                        <td colspan="2">Please select one {{modelValue}}</td>
+                                        
+                                    </tr>
+                                </thead>
+                                <tr ng-repeat="x in UniqueNUmbersList | filter : {type : modelValue}">
+                                    <td><input type="radio" class="radio-custom-green" name="uniqueNumberRadio" ng-model="x.Selected" value="{{x.UniqueNumber}}" id="uniqueNumber_{{x.dynId}}"></td>
+                                    <td>{{x.UniqueNumber}}</td>
+                                    <td style="text-align:center"><a href="#" ng-click="removeUniqueNumber(x.dynId)"><span class="fa fa-trash text-danger"></span></a></td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                    
                 </div>
 
                 <!-- Modal footer -->
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-sm btn-success-custom" ng-click="acceptUniqueNumber(modelValue)">Accept</button>
+                    <button type="button" class="btn btn-sm btn-danger-custom" data-dismiss="modal">Close</button>
                 </div>
 
             </div>
