changes completed by kanna

--- a/CCMS/Views/Home/QueryByPerson.cshtml
+++ b/CCMS/Views/Home/QueryByPerson.cshtml
@@ -219,7 +219,9 @@
                                             <td>1.</td>
                                             <td>W1085979</td>
                                             <td><a href="#" ng-click="ShowPersonDetails1()">5206105264186</a></td>
-                                            <td></td>
+                                            <td style="text-align:center">
+                                                <img src="~/Content/assets/flags/sa_flag.png" style="width:20px;height:20px" />
+                                            </td>
                                               <td></td>
                                             <td>MACHASE</td>
                                             <td>HOPO</td>
@@ -229,7 +231,9 @@
                                             <td>2.</td>
                                             <td></td>
                                             <td><a href="#" ng-click="ShowPersonDetails1()">5601085713089</a></td>
-                                            <td></td>
+                                            <td style="text-align:center">
+                                                <img src="~/Content/assets/flags/zb_flag.png" style="width:20px;height:20px" />
+                                            </td>
                                               <td></td>
                                             <td>J</td>
                                             <td>NGXALABA</td>
@@ -239,7 +243,9 @@
                                             <td>3.</td>
                                             <td></td>
                                             <td><a href="#" ng-click="ShowPersonDetails1()">4204230021085</a></td>
-                                            <td></td>
+                                            <td style="text-align:center">
+                                                <img src="~/Content/assets/flags/mz_flag.png" style="width:20px;height:20px" />
+                                            </td>
                                               <td></td>
                                             <td>J.E</td>
                                             <td>Van Der Merwe</td>
@@ -249,7 +255,9 @@
                                             <td>4.</td>
                                             <td></td>
                                             <td><a href="#" ng-click="ShowPersonDetails1()">8911195577085</a></td>
-                                            <td></td>
+                                            <td style="text-align:center">
+                                                <img src="~/Content/assets/flags/nm_flag.png" style="width:20px;height:20px" />
+                                            </td>
                                               <td></td>
                                             <td></td>
                                             <td>BANDA TD</td>
@@ -259,7 +267,9 @@
                                             <td>5.</td>
                                             <td>W1508654</td>
                                             <td><a href="#" ng-click="ShowPersonDetails1()">6206045922082</a></td>
-                                              <td></td>
+                                            <td style="text-align:center">
+                                                <img src="~/Content/assets/flags/bw_flag.png" style="width:20px;height:20px" />
+                                            </td>
                                             <td>6768572</td>
                                             <td>MOLAOA</td>
                                             <td>ABRAM JANNYANA</td>
