--- a/CCMS/Views/Home/ReceiveInnbondCall.cshtml
+++ b/CCMS/Views/Home/ReceiveInnbondCall.cshtml
@@ -248,6 +248,9 @@
                                             <td>1.</td>
                                             <td>W1085979</td>
                                             <td><a href="#" ng-click="ShowReceiveIbondCalls()">5206105264186</a></td>
+                                            <td style="text-align:center">
+                                                <img src="~/Content/assets/flags/sa_flag.png" style="width:20px;height:20px" />
+                                            </td>
                                             <td></td>
                                             <td>MACHASE</td>
                                             <td>HOPO</td>
@@ -257,6 +260,9 @@
                                             <td>2.</td>
                                             <td></td>
                                             <td><a href="#" ng-click="ShowReceiveIbondCalls()">5601085713089</a></td>
+                                            <td style="text-align:center">
+                                                <img src="~/Content/assets/flags/zb_flag.png" style="width:20px;height:20px" />
+                                            </td>
                                             <td></td>
                                             <td>J</td>
                                             <td>NGXALABA</td>
@@ -266,6 +272,9 @@
                                             <td>3.</td>
                                             <td></td>
                                             <td><a href="#" ng-click="ShowReceiveIbondCalls()">4204230021085</a></td>
+                                            <td style="text-align:center">
+                                                <img src="~/Content/assets/flags/mz_flag.png" style="width:20px;height:20px" />
+                                            </td>
                                             <td></td>
                                             <td>J.E</td>
                                             <td>Van Der Merwe</td>
@@ -275,6 +284,9 @@
                                             <td>4.</td>
                                             <td></td>
                                             <td><a href="#" ng-click="ShowReceiveIbondCalls()">8911195577085</a></td>
+                                            <td style="text-align:center">
+                                                <img src="~/Content/assets/flags/nm_flag.png" style="width:20px;height:20px" />
+                                            </td>
                                             <td></td>
                                             <td></td>
                                             <td>BANDA TD</td>
@@ -284,21 +296,16 @@
                                             <td>5.</td>
                                             <td>W1508654</td>
                                             <td><a href="#" ng-click="ShowReceiveIbondCalls()">6206045922082</a></td>
+                                            <td style="text-align:center">
+                                                <img src="~/Content/assets/flags/bw_flag.png" style="width:20px;height:20px" />
+                                            </td>
                                             <td>6768572</td>
                                             <td>MOLAOA</td>
                                             <td>ABRAM JANNYANA</td>
                                             <td>1962-06-04</td>
                                         </tr>
-                                        @*<tr ng-repeat="x in ReceiveInbondCallList">
-                                                <td>{{x.Industry_Number}}</td>
-                                                <td><a href="#" ng-click="ShowReceiveIbondCalls()">{{x.ID_No}}</a></td>
-                                                <td>{{x.Passport}}</td>
-                                                <td>{{x.First_Name}}</td>
-                                                <td>{{x.Surname}}</td>
-                                                <td>{{x.Date_Of_Birth.replace('/Date(','').replace(')/','') | date:"dd-MM-yyyy"}}</td>
-                                            </tr>*@
-
                                     </tbody>
+                                    
                                 </table>
                             </div>
                             <!-- /.card-body -->
